# LinguaTime

./: .env.example  .flake8  .gitignore  GEMINI.md  Makefile  TODO  pyproject.toml
apps/: admin.py  apps.py  forms.py  mixins.py  urls.py  views.py
apps/admin/: admin.py
apps/fixtures/: city.json  country.json  region.json  user.json
apps/models/: __init__.py  availabilitys.py  base.py  billing.py  bookings.py  cities.py  google_calendar.py  google_calendar_channel.py  google_credentials.py  interpreters.py  languages.py  models.py  orders.py  reviews.py  specializations.py  users.py
apps/services/: google_calendar.py  interpreter_search.py  order_workflow.py  telegram_bot.py
apps/static/apps/css/: client-profile.css
apps/static/apps/js/: auth.js
apps/static/css/: auth.css
apps/static/js/: auth.js
apps/tasks/: __init__.py  calendar_tasks.py  telegram_tasks.py
apps/telegram/: __init__.py  bot.py
apps/views/: __init__.py  auth.py  google_calendar_oauth.py  google_calendar_webhook.py  oauth2.py  order_workflow.py  profile.py  role_switch.py  telegram_webhook.py  views.py
root/: settings.py  urls.py
templates/apps/: base.html
templates/apps/auth/: login.html  signup.html  singup.html  testsignup.html
templates/apps/client/: billing.html  dashboard.html  main_filter.html  new-order.html  orders.html  profile.html  settings.html
templates/apps/interpreter/: base.html  dashboard.html  earnings.html  orders.html  profile.html  settings.html
templates/apps/parts/: client_sidebar.html  header.html  interpreter_sidebar.html
templates/apps/profile/: client-profile.html  interpreter-profile.html  translator_booking.html
