[project]
name = "LinguaTime"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiogram==3.22.0",
    "argon2-cffi>=25.1.0",
    "celery>=5.5.3",
    "django>=5.2.6",
    "django-celery-results>=2.6.0",
    "django-ckeditor-5>=0.2.18",
    "django-extensions>=4.1",
    "django-filter>=25.1",
    "django-jazzmin>=3.0.1",
    "django-location-field>=2.7.3",
    "django-nested-admin>=4.1.5",
    "google-api-python-client>=2.187.0",
    "google-auth>=2.43.0",
    "google-auth-httplib2>=0.2.1",
    "google-auth-oauthlib>=1.2.2",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "isort>=7.0.0",
]


[tool.isort]
skip_glob = ["**/migrations/*.py"]
